ADD：对笔记本的增删操作

--- a/views/notebooks.ejs
+++ b/views/notebooks.ejs
@@ -24,7 +24,7 @@
             <div class="layui-col-xs-offset10 layui-col-xs2">
                 <p class="layui-col-xs-offset2 layui-col-xs6"
                    style="font-size:16px;text-align: right;margin-top: 6px;margin-right: 5px">添加笔记本</p>
-                <button class="layui-col-xs2 layui-btn layui-btn-radius layui-btn-sm layui-btn">
+                <button class="add_nb layui-col-xs2 layui-btn layui-btn-radius layui-btn-sm layui-btn">
                     <i class="layui-icon">&#xe61f;</i>
                 </button>
             </div>
@@ -39,7 +39,7 @@
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
-                        <button class="layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
+                        <button class="delete_nb layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
                             <i class="layui-icon">&#xe640;</i>
                         </button>
                     </div>
@@ -52,7 +52,7 @@
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
-                        <button class="layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
+                        <button class="delete_nb layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
                             <i class="layui-icon">&#xe640;</i>
                         </button>
                     </div>
@@ -65,7 +65,7 @@
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
-                        <button class="layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
+                        <button class="delete_nb layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
                             <i class="layui-icon">&#xe640;</i>
                         </button>
                     </div>
@@ -78,7 +78,7 @@
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
-                        <button class="layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
+                        <button class="delete_nb layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
                             <i class="layui-icon">&#xe640;</i>
                         </button>
                     </div>
@@ -91,7 +91,7 @@
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
-                        <button class="layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
+                        <button class="delete_nb layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
                             <i class="layui-icon">&#xe640;</i>
                         </button>
                     </div>
@@ -104,7 +104,7 @@
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
-                        <button class="layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
+                        <button class="delete_nb layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
                             <i class="layui-icon">&#xe640;</i>
                         </button>
                     </div>
@@ -117,7 +117,7 @@
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
-                        <button class="layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
+                        <button class="delete_nb layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
                             <i class="layui-icon">&#xe640;</i>
                         </button>
                     </div>
@@ -130,7 +130,7 @@
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
-                        <button class="layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
+                        <button class="delete_nb layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
                             <i class="layui-icon">&#xe640;</i>
                         </button>
                     </div>
@@ -143,7 +143,7 @@
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
-                        <button class="layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
+                        <button class="delete_nb layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
                             <i class="layui-icon">&#xe640;</i>
                         </button>
                     </div>
@@ -156,7 +156,7 @@
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
-                        <button class="layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
+                        <button class="delete_nb layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
                             <i class="layui-icon">&#xe640;</i>
                         </button>
                     </div>
@@ -169,7 +169,7 @@
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
-                        <button class="layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
+                        <button class="delete_nb layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
                             <i class="layui-icon">&#xe640;</i>
                         </button>
                     </div>
@@ -182,7 +182,7 @@
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
-                        <button class="layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
+                        <button class="delete_nb layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
                             <i class="layui-icon">&#xe640;</i>
                         </button>
                     </div>
@@ -195,7 +195,7 @@
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
-                        <button class="layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
+                        <button class="delete_nb layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
                             <i class="layui-icon">&#xe640;</i>
                         </button>
                     </div>
@@ -208,7 +208,7 @@
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
-                        <button class="layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
+                        <button class="delete_nb layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
                             <i class="layui-icon">&#xe640;</i>
                         </button>
                     </div>
@@ -221,7 +221,7 @@
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
-                        <button class="layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
+                        <button class="delete_nb layui-col-xs-offset5 layui-col-xs2 layui-btn layui-btn-sm layui-btn-danger">
                             <i class="layui-icon">&#xe640;</i>
                         </button>
                     </div>
@@ -243,6 +243,51 @@
     var element = layui.element;
   });
 
+  $('.add_nb').click(function (e) {
+
+    // TODO 调用模态框输入笔记本的姓名，并选择样式，再保存
+    var fakeData = {
+      nb_name: "笔记本",
+      nb_icon_id: 5,
+      user_id: 'charles'
+    };
+
+    $.ajax({
+      type: "post",
+      async: true,
+      url: "/notebooks/add_nb",
+      data: fakeData,
+
+      success: function (result) {
+        alert(result);
+      },
+      error: function (result) {
+        alert("错误" + result);
+      }
+    });
+  });
+
+  $('.delete_nb').click(function (e) {
+
+    // TODO 获取到具体是哪一本笔记本？
+    var fakeData = {
+      nb_id: 23
+    };
+
+    $.ajax({
+      type: "post",
+      async: true,
+      url: "/notebooks/delete_nb",
+      data: fakeData,
+
+      success: function (result) {
+        alert(result);
+      },
+      error: function (result) {
+        alert("错误" + result);
+      }
+    });
+  });
 
 
 </script>
