ADD：对笔记本的增加操作新增模态框

--- a/views/notebooks.ejs
+++ b/views/notebooks.ejs
@@ -7,6 +7,7 @@
     <title>Marvel Note</title>
     <link rel="stylesheet" href="/layui/css/layui.css">
     <link rel="stylesheet" href="/stylesheets/notebooks.css">
+    <link rel="stylesheet" href="/stylesheets/note.css">
     <style>
         body {
             margin: 7px;
@@ -34,8 +35,10 @@
                 <div class="layui-col-xs3">
                     <div class="nb1">
                         <label class="layui-col-xs12" style="text-align: center">
-                            <img alt="Background" src="/images/notebook0.png" style="max-width: 100% ">
+                            <img alt="Background" src="/images/nb_covers/notebook0.png" style="max-width: 100% ">
                         </label>
+                        <p class="nb_id" style="display: none">0</p>
+                        <p class="nb_id" style="display: none">0</p>
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
@@ -47,8 +50,9 @@
                 <div class="layui-col-xs3">
                     <div class="nb1">
                         <label class="layui-col-xs12" style="text-align: center">
-                            <img alt="Background" src="/images/notebook1.png" style="max-width: 100% ">
+                            <img alt="Background" src="/images/nb_covers/notebook1.png" style="max-width: 100% ">
                         </label>
+                        <p class="nb_id" style="display: none">0</p>
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
@@ -60,8 +64,9 @@
                 <div class="layui-col-xs3">
                     <div class="nb1">
                         <label class="layui-col-xs12" style="text-align: center">
-                            <img alt="Background" src="/images/notebook2.png" style="max-width: 100% ">
+                            <img alt="Background" src="/images/nb_covers/notebook2.png" style="max-width: 100% ">
                         </label>
+                        <p class="nb_id" style="display: none">0</p>
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
@@ -73,8 +78,9 @@
                 <div class="layui-col-xs3">
                     <div class="nb1">
                         <label class="layui-col-xs12" style="text-align: center">
-                            <img alt="Background" src="/images/notebook3.png" style="max-width: 100% ">
+                            <img alt="Background" src="/images/nb_covers/notebook3.png" style="max-width: 100% ">
                         </label>
+                        <p class="nb_id" style="display: none">0</p>
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
@@ -86,8 +92,9 @@
                 <div class="layui-col-xs3">
                     <div class="nb2">
                         <label class="layui-col-xs12" style="text-align: center">
-                            <img alt="Background" src="/images/notebook4.png" style="max-width: 100% ">
+                            <img alt="Background" src="/images/nb_covers/notebook4.png" style="max-width: 100% ">
                         </label>
+                        <p class="nb_id" style="display: none">0</p>
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
@@ -99,8 +106,9 @@
                 <div class="layui-col-xs3">
                     <div class="nb2">
                         <label class="layui-col-xs12" style="text-align: center">
-                            <img alt="Background" src="/images/notebook5.png" style="max-width: 100% ">
+                            <img alt="Background" src="/images/nb_covers/notebook5.png" style="max-width: 100% ">
                         </label>
+                        <p class="nb_id" style="display: none">0</p>
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
@@ -112,8 +120,9 @@
                 <div class="layui-col-xs3">
                     <div class="nb2">
                         <label class="layui-col-xs12" style="text-align: center">
-                            <img alt="Background" src="/images/notebook6.png" style="max-width: 100% ">
+                            <img alt="Background" src="/images/nb_covers/notebook6.png" style="max-width: 100% ">
                         </label>
+                        <p class="nb_id" style="display: none">0</p>
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
@@ -125,8 +134,9 @@
                 <div class="layui-col-xs3">
                     <div class="nb2">
                         <label class="layui-col-xs12" style="text-align: center">
-                            <img alt="Background" src="/images/notebook7.png" style="max-width: 100% ">
+                            <img alt="Background" src="/images/nb_covers/notebook7.png" style="max-width: 100% ">
                         </label>
+                        <p class="nb_id" style="display: none">0</p>
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
@@ -138,8 +148,9 @@
                 <div class="layui-col-xs3">
                     <div class="nb2">
                         <label class="layui-col-xs12" style="text-align: center">
-                            <img alt="Background" src="/images/notebook8.png" style="max-width: 100% ">
+                            <img alt="Background" src="/images/nb_covers/notebook8.png" style="max-width: 100% ">
                         </label>
+                        <p class="nb_id" style="display: none">0</p>
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
@@ -151,8 +162,9 @@
                 <div class="layui-col-xs3">
                     <div class="nb2">
                         <label class="layui-col-xs12" style="text-align: center">
-                            <img alt="Background" src="/images/notebook9.png" style="max-width: 100% ">
+                            <img alt="Background" src="/images/nb_covers/notebook9.png" style="max-width: 100% ">
                         </label>
+                        <p class="nb_id" style="display: none">0</p>
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
@@ -164,8 +176,9 @@
                 <div class="layui-col-xs3">
                     <div class="nb2">
                         <label class="layui-col-xs12" style="text-align: center">
-                            <img alt="Background" src="/images/notebook10.png" style="max-width: 100% ">
+                            <img alt="Background" src="/images/nb_covers/notebook10.png" style="max-width: 100% ">
                         </label>
+                        <p class="nb_id" style="display: none">0</p>
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
@@ -177,8 +190,9 @@
                 <div class="layui-col-xs3">
                     <div class="nb2">
                         <label class="layui-col-xs12" style="text-align: center">
-                            <img alt="Background" src="/images/notebook11.png" style="max-width: 100% ">
+                            <img alt="Background" src="/images/nb_covers/notebook11.png" style="max-width: 100% ">
                         </label>
+                        <p class="nb_id" style="display: none">0</p>
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
@@ -190,8 +204,9 @@
                 <div class="layui-col-xs3">
                     <div class="nb2">
                         <label class="layui-col-xs12" style="text-align: center">
-                            <img alt="Background" src="/images/notebook12.png" style="max-width: 100% ">
+                            <img alt="Background" src="/images/nb_covers/notebook12.png" style="max-width: 100% ">
                         </label>
+                        <p class="nb_id" style="display: none">0</p>
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
@@ -203,8 +218,9 @@
                 <div class="layui-col-xs3">
                     <div class="nb2">
                         <label class="layui-col-xs12" style="text-align: center">
-                            <img alt="Background" src="/images/notebook13.png" style="max-width: 100% ">
+                            <img alt="Background" src="/images/nb_covers/notebook13.png" style="max-width: 100% ">
                         </label>
+                        <p class="nb_id" style="display: none">0</p>
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
@@ -216,8 +232,9 @@
                 <div class="layui-col-xs3">
                     <div class="nb2">
                         <label class="layui-col-xs12" style="text-align: center">
-                            <img alt="Background" src="/images/notebook14.png" style="max-width: 100% ">
+                            <img alt="Background" src="/images/nb_covers/notebook14.png" style="max-width: 100% ">
                         </label>
+                        <p class="nb_id" style="display: none">0</p>
                         <h4 class="layui-col-xs12" style="text-align: center">笔记本1</h4>
                         <p class="layui-col-xs12" style="font-size: 12px">
                             描述：这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本这个笔记本是宝宝的第一个笔记本</p>
@@ -235,50 +252,131 @@
 <link href="/stylesheets/bootstrap.css" rel="stylesheet">
 <link href="/stylesheets/font-awesome.min.css" rel="stylesheet">
 <script src="/javascripts/jquery-3.2.1.min.js"></script>
-<script src="/javascripts/bootstrap.js"></script>
+<script src="/javascripts/bootstrap.js"></script>lo
 
 <script src="/layui/layui.js"></script>
 <script>
-  layui.use('element', function () {
-    var element = layui.element;
-  });
 
   $('.add_nb').click(function (e) {
 
-    // TODO 调用模态框输入笔记本的姓名，并选择样式，再保存
-    var fakeData = {
-      nb_name: "笔记本",
-      nb_icon_id: 5,
-      user_id: 'charles'
-    };
+    layui.define(['layer'], function (exports) {
+      var layer = layui.layer;
 
-    $.ajax({
-      type: "post",
-      async: true,
-      url: "/notebooks/add_nb",
-      data: fakeData,
+      var html_content =
+        '<div class="layui-bg-black" style="width: 570px;height: 670px;margin: 10px 15px;">\n' +
+        '    <!-- 笔记本名字 -->\n' +
+        '    <div class="layui-col-xs12" style="margin-left: 10px;margin-top: 10px;">\n' +
+        '        <label class="layui-col-xs3" style="font-size: 18px;color: #BDC0BA">您的笔记本名称</label>\n' +
+        '        <div class=" layui-col-xs4 note_title_outer" style="margin-top: -4px;">\n' +
+        '            <input type="text" class=" note_title" placeholder="默认笔记本" style="font-size: 18px">\n' +
+        '        </div>\n' +
+        '    </div>\n' +
+        '\n' +
+        '    <hr class="layui-bg-gray" style="margin-left: 10px;margin-right: 10px;">\n' +
+        '    <!-- 选择笔记本封面图片 -->\n' +
+        '    <div class="layui-col-xs12" style="margin-left: 10px;margin-top: -10px;">\n' +
+        '        <label class="layui-col-xs12" style="font-size: 18px;color: #BDC0BA">您的笔记本封面</label>\n' +
+        '        <div class="select_cover layui-col-xs3">\n' +
+        '            <img alt="Background" src="/images/nb_covers/notebook0.png" style="max-width: 100%;padding: 5px;margin: 5px;">\n' +
+        '        </div>\n' +
+        '        <div class="select_cover layui-col-xs3">\n' +
+        '            <img alt="Background" src="/images/nb_covers/notebook1.png" style="max-width: 100%;padding: 5px;margin: 5px;">\n' +
+        '        </div>\n' +
+        '        <div class="select_cover layui-col-xs3">\n' +
+        '            <img alt="Background" src="/images/nb_covers/notebook2.png" style="max-width: 100%;padding: 5px;margin: 5px;">\n' +
+        '        </div>\n' +
+        '        <div class="select_cover layui-col-xs3">\n' +
+        '            <img alt="Background" src="/images/nb_covers/notebook3.png" style="max-width: 100%;padding: 5px;margin: 5px;">\n' +
+        '        </div>\n' +
+        '        <div class="select_cover layui-col-xs3">\n' +
+        '            <img alt="Background" src="/images/nb_covers/notebook4.png" style="max-width: 100%;padding: 5px;margin: 5px;">\n' +
+        '        </div>\n' +
+        '        <div class="select_cover layui-col-xs3">\n' +
+        '            <img alt="Background" src="/images/nb_covers/notebook5.png" style="max-width: 100%;padding: 5px;margin: 5px;">\n' +
+        '        </div>\n' +
+        '        <div class="select_cover layui-col-xs3">\n' +
+        '            <img alt="Background" src="/images/nb_covers/notebook6.png" style="max-width: 100%;padding: 5px;margin: 5px;">\n' +
+        '        </div>\n' +
+        '        <div class="select_cover layui-col-xs3">\n' +
+        '            <img alt="Background" src="/images/nb_covers/notebook7.png" style="max-width: 100%;padding: 5px;margin: 5px;">\n' +
+        '        </div>\n' +
+        '        <div class="select_cover layui-col-xs3">\n' +
+        '            <img alt="Background" src="/images/nb_covers/notebook8.png" style="max-width: 100%;padding: 5px;margin: 5px;">\n' +
+        '        </div>\n' +
+        '        <div class="select_cover layui-col-xs3">\n' +
+        '            <img alt="Background" src="/images/nb_covers/notebook9.png" style="max-width: 100%;padding: 5px;margin: 5px;">\n' +
+        '        </div>\n' +
+        '        <div class="select_cover layui-col-xs3">\n' +
+        '            <img alt="Background" src="/images/nb_covers/notebook10.png" style="max-width: 100%;padding: 5px;margin: 5px;">\n' +
+        '        </div>\n' +
+        '        <div class="select_cover layui-col-xs3">\n' +
+        '            <img alt="Background" src="/images/nb_covers/notebook11.png" style="max-width: 100%;padding: 5px;margin: 5px;">\n' +
+        '        </div>\n' +
+        '        <div class="select_cover layui-col-xs3">\n' +
+        '            <img alt="Background" src="/images/nb_covers/notebook12.png" style="max-width: 100%;padding: 5px;margin: 5px;">\n' +
+        '        </div>\n' +
+        '        <div class="select_cover layui-col-xs3">\n' +
+        '            <img alt="Background" src="/images/nb_covers/notebook13.png" style="max-width: 100%;padding: 5px;margin: 5px;">\n' +
+        '        </div>\n' +
+        '        <div class="select_cover layui-col-xs3">\n' +
+        '            <img alt="Background" src="/images/nb_covers/notebook14.png" style="max-width: 100%;padding: 5px;margin: 5px;">\n' +
+        '        </div>\n' +
+        '    </div>\n' +
+        '</div>';
 
-      success: function (result) {
-        alert(result);
-      },
-      error: function (result) {
-        alert("错误" + result);
-      }
+      // TODO 调用模态框输入笔记本的姓名，并选择样式，再保存
+      layer.open({
+        type: 1,
+        title: ['添加笔记本', 'font-size:24px;color:#393D48'],
+        content: html_content,
+        skin: 'layui-layer-blu',
+        area: ['600px', '360px'],
+        move: false,
+        shade: [0.75, '#000'],
+        anim: 1,
+        resize: false,
+        btn: ['确认添加'],
+        yes: function (index, layero) {
+          alert("xixixxi");
+          // var fakeData = {
+          //   nb_name: "笔记本",
+          //   nb_icon_id: 5,
+          //   user_id: 'charles'
+          // };
+          //
+          // $.ajax({
+          //   type: "post",
+          //   async: true,
+          //   url: "/notebooks/add_nb",
+          //   data: fakeData,
+          //
+          //   success: function (result) {
+          //     alert(result);
+          //   },
+          //   error: function (result) {
+          //     alert("错误" + result);
+          //   }
+          // });
+
+        },
+        cancel: function () {
+
+        },
+        closeBtn: 2
+      });
     });
   });
 
   $('.delete_nb').click(function (e) {
-
-    // TODO 获取到具体是哪一本笔记本？
-    var fakeData = {
-      nb_id: 23
+    var data = {
+      nb_id: $(this).parent().find(".nb_id").html()
     };
 
     $.ajax({
       type: "post",
       async: true,
       url: "/notebooks/delete_nb",
-      data: fakeData,
+      data: data,
 
       success: function (result) {
         alert(result);
@@ -287,6 +385,15 @@
         alert("错误" + result);
       }
     });
+  });
+
+  // 点选封面之后要有改变
+  $('.select_cover').click(function () {
+    alert("aaa");
+    $(".select_cover").each(function () {
+      $(this).css("border", "0px");
+    });
+    $(this).css("border", "2px solid red");
   });
 
 
