--- a/views/notebooks.ejs
+++ b/views/notebooks.ejs
@@ -7,7 +7,6 @@
     <title>Marvel Note</title>
     <link rel="stylesheet" href="/layui/css/layui.css">
     <link rel="stylesheet" href="/stylesheets/notebooks.css">
-    <link rel="stylesheet" href="/stylesheets/note.css">
     <style>
         body {
             margin: 7px;
@@ -252,10 +251,13 @@
 <link href="/stylesheets/bootstrap.css" rel="stylesheet">
 <link href="/stylesheets/font-awesome.min.css" rel="stylesheet">
 <script src="/javascripts/jquery-3.2.1.min.js"></script>
-<script src="/javascripts/bootstrap.js"></script>lo
+<script src="/javascripts/bootstrap.js"></script>
 
 <script src="/layui/layui.js"></script>
 <script>
+  layui.use('element', function () {
+    var element = layui.element;
+  });
 
   $('.add_nb').click(function (e) {
 
